--- a/CinemaUDEA/web/index.xhtml
+++ b/CinemaUDEA/web/index.xhtml
@@ -4,11 +4,57 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Facelet Title</title>
+        <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
     <h:body>
         Hello from Facelets
         <br />
         <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
+        <br />
+        <h:link outcome="/presentacion/calificacion/List" value="Show All Calificacion Items"/>
+        <br />
+        <h:link outcome="/presentacion/cartelera/List" value="Show All Cartelera Items"/>
+        <br />
+        <h:link outcome="/presentacion/formato/List" value="Show All Formato Items"/>
+        <br />
+        <h:link outcome="/presentacion/formatoPelicula/List" value="Show All FormatoPelicula Items"/>
+        <br />
+        <h:link outcome="/presentacion/funcion/List" value="Show All Funcion Items"/>
+        <br />
+        <h:link outcome="/presentacion/genero/List" value="Show All Genero Items"/>
+        <br />
+        <h:link outcome="/presentacion/generos/List" value="Show All Generos Items"/>
+        <br />
+        <h:link outcome="/presentacion/idioma/List" value="Show All Idioma Items"/>
+        <br />
+        <h:link outcome="/presentacion/localidad/List" value="Show All Localidad Items"/>
+        <br />
+        <h:link outcome="/presentacion/pais/List" value="Show All Pais Items"/>
+        <br />
+        <h:link outcome="/presentacion/pelicula/List" value="Show All Pelicula Items"/>
+        <br />
+        <h:link outcome="/presentacion/sala/List" value="Show All Sala Items"/>
+        <br />
+        <h:link outcome="/presentacion/silla/List" value="Show All Silla Items"/>
+        <br />
+        <h:link outcome="/presentacion/socio/List" value="Show All Socio Items"/>
+        <br />
+        <h:link outcome="/presentacion/teatro/List" value="Show All Teatro Items"/>
     </h:body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </html>
 
