Corregidos todos los campos para que se lean correctamente y no los toString por defecto, sin arreglar aún las vistas, hasta este momento funciona

--- a/CinemaUDEA/web/index.xhtml
+++ b/CinemaUDEA/web/index.xhtml
@@ -4,42 +4,39 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Facelet Title</title>
+        <h:outputStylesheet name="css/base.css"/>
         <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
     <h:body>
-        Hello from Facelets
+        <h:link outcome="/presentacion/calificacion/List" value="Calificaciones de Peliculas"/>
         <br />
-        <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
+        <h:link outcome="/presentacion/cartelera/List" value="Cartelera"/>
         <br />
-        <h:link outcome="/presentacion/calificacion/List" value="Show All Calificacion Items"/>
+        <h:link outcome="/presentacion/formato/List" value="Formatos"/>
         <br />
-        <h:link outcome="/presentacion/cartelera/List" value="Show All Cartelera Items"/>
+        <h:link outcome="/presentacion/formatoPelicula/List" value="Formatos Pelicula"/>
         <br />
-        <h:link outcome="/presentacion/formato/List" value="Show All Formato Items"/>
+        <h:link outcome="/presentacion/funcion/List" value="Funciones"/>
         <br />
-        <h:link outcome="/presentacion/formatoPelicula/List" value="Show All FormatoPelicula Items"/>
+        <h:link outcome="/presentacion/genero/List" value="Generos"/>
         <br />
-        <h:link outcome="/presentacion/funcion/List" value="Show All Funcion Items"/>
+        <h:link outcome="/presentacion/generos/List" value="Generos Pelicula"/>
         <br />
-        <h:link outcome="/presentacion/genero/List" value="Show All Genero Items"/>
+        <h:link outcome="/presentacion/idioma/List" value="Idiomas"/>
         <br />
-        <h:link outcome="/presentacion/generos/List" value="Show All Generos Items"/>
+        <h:link outcome="/presentacion/localidad/List" value="Localidades"/>
         <br />
-        <h:link outcome="/presentacion/idioma/List" value="Show All Idioma Items"/>
+        <h:link outcome="/presentacion/pais/List" value="Pais"/>
         <br />
-        <h:link outcome="/presentacion/localidad/List" value="Show All Localidad Items"/>
+        <h:link outcome="/presentacion/pelicula/List" value="Peliculas"/>
         <br />
-        <h:link outcome="/presentacion/pais/List" value="Show All Pais Items"/>
+        <h:link outcome="/presentacion/sala/List" value="Salas"/>
         <br />
-        <h:link outcome="/presentacion/pelicula/List" value="Show All Pelicula Items"/>
+        <h:link outcome="/presentacion/silla/List" value="Sillas"/>
         <br />
-        <h:link outcome="/presentacion/sala/List" value="Show All Sala Items"/>
+        <h:link outcome="/presentacion/socio/List" value="Socios"/>
         <br />
-        <h:link outcome="/presentacion/silla/List" value="Show All Silla Items"/>
-        <br />
-        <h:link outcome="/presentacion/socio/List" value="Show All Socio Items"/>
-        <br />
-        <h:link outcome="/presentacion/teatro/List" value="Show All Teatro Items"/>
+        <h:link outcome="/presentacion/teatro/List" value="Teatros"/>
     </h:body>
 
 
