--- a/CinemaUDEA/web/presentacion/pelicula/List.xhtml
+++ b/CinemaUDEA/web/presentacion/pelicula/List.xhtml
@@ -61,7 +61,7 @@
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListPeliculaTitle_urlImagen}"/>
                             </f:facet>
-                            <h:outputText value="#{item.urlImagen}"/>
+                            <h:graphicImage value="/resources/images/peliculas/#{item.urlImagen}" width="150"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
