--- a/CinemaUDEA/web/presentacion/formatoPelicula/List.xhtml
+++ b/CinemaUDEA/web/presentacion/formatoPelicula/List.xhtml
@@ -29,33 +29,27 @@
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListFormatoPeliculaTitle_formatopelicula}"/>
+                                <h:outputText value="#{bundle.ListFormatoPeliculaTitle_pelicula}"/>
                             </f:facet>
-                            <h:outputText value="#{item.formatopelicula}"/>
+                            <h:outputText value="#{item.pelicula.toString()}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListFormatoPeliculaTitle_formato}"/>
                             </f:facet>
-                            <h:outputText value="#{item.formato}"/>
+                            <h:outputText value="#{item.formato.toString()}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListFormatoPeliculaTitle_idioma}"/>
                             </f:facet>
-                            <h:outputText value="#{item.idioma}"/>
+                            <h:outputText value="#{item.idioma.idioma}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListFormatoPeliculaTitle_subtitulos}"/>
                             </f:facet>
-                            <h:outputText value="#{item.subtitulos}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListFormatoPeliculaTitle_pelicula}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.pelicula}"/>
+                            <h:outputText value="#{item.subtitulos.idioma}"/>
                         </p:column>
                         <f:facet name="footer">
                             <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{formatoPeliculaController.prepareCreate}" update=":FormatoPeliculaCreateForm" oncomplete="PF('FormatoPeliculaCreateDialog').show()"/>
