--- a/CinemaUDEA/web/presentacion/sala/List.xhtml
+++ b/CinemaUDEA/web/presentacion/sala/List.xhtml
@@ -49,7 +49,7 @@
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListSalaTitle_teatro}"/>
                             </f:facet>
-                            <h:outputText value="#{item.teatro}"/>
+                            <h:outputText value="#{item.teatro.toString()}"/>
                         </p:column>
                         <f:facet name="footer">
                             <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{salaController.prepareCreate}" update=":SalaCreateForm" oncomplete="PF('SalaCreateDialog').show()"/>
