--- a/CinemaUDEA/web/template.xhtml
+++ b/CinemaUDEA/web/template.xhtml
@@ -7,6 +7,7 @@
 
     <h:head>
         <title><ui:insert name="title">Default Title</ui:insert></title>
+        <h:outputStylesheet name="css/base.css"/>
         <h:outputStylesheet library="css" name="jsfcrud.css"/>
         <h:outputScript library="js" name="jsfcrud.js"/>
     </h:head>
@@ -39,10 +40,6 @@
                         </p:submenu>
                     </p:menubar>
                 </h:form>
-            </p:layoutUnit>
-
-            <p:layoutUnit position="south" size="60">
-                <ui:insert name="footer"/>
             </p:layoutUnit>
 
             <p:layoutUnit position="center">
